# 3d-recognition

./: README.md
CG_Online/: CMakeLists.txt  package.xml  pose_data.txt
CG_Online/include/: CSHOTDescriptor.h  OrganizedSegmentation.h  Recongnition3D.h  SimpleOpenNIViewer.h  randutil.h  shot.h
CG_Online/src/: TrainMain.cpp  main.cpp  randutil.cpp  utils.cpp
CSHOT_Training/: .TrainMain.cpp.swp  CMakeLists.txt  package.xml
CSHOT_Training/include/: CSHOTDescriptor.h  OrganizedSegmentation.h  SimpleOpenNIViewer.h  shot.h  utils.h
CSHOT_Training/src/: MeshPointsIndex.cpp  TrainMain.cpp  main.cpp  shot.cpp  utils.cpp
my_pcl_tutorial/: CMakeLists.txt~  Dumbbells2.pcd  Kyle.pcd  bear.pcd  bear3.pcd  cafe.pcd  cloud_cluster_1_0.pcd  cloud_cluster_1_2.pcd  cloud_cluster_2.pcd  cryaon.pcd  cryaon2.pcd  pig.pcd
my_pcl_tutorial/src/: cloud_viewer.cpp  correspondence_grouping.cpp  realsense_viewer.cpp
realsense_camera/: CMakeLists.txt
realsense_camera/launch/: sr300.launch
